Add new Fields to Publisher and implemented create and update

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>org.eclipse.persistence.jpa</artifactId>
             <version>3.0.2</version>
     </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
